# catkin_ws

./: client_test.cpp  how_to_ros_vlp.txt  reference_point.txt  rosgraph_ros_vlp.dot
devel/include/ublox_msgs/: Ack.h  AidALM.h  AidEPH.h  AidHUI.h  CfgANT.h  CfgCFG.h  CfgDAT.h  CfgDGNSS.h  CfgGNSS.h  CfgGNSS_Block.h  CfgHNR.h  CfgINF.h  CfgINF_Block.h  CfgMSG.h  CfgNAV5.h  CfgNAVX5.h  CfgNMEA.h  CfgNMEA6.h  CfgNMEA7.h  CfgPRT.h  CfgRATE.h  CfgRST.h  CfgSBAS.h  CfgTMODE3.h  CfgUSB.h  EsfINS.h  EsfMEAS.h  EsfRAW.h  EsfRAW_Block.h  EsfSTATUS.h  EsfSTATUS_Sens.h  HnrPVT.h  Inf.h  MgaGAL.h  MonGNSS.h  MonHW.h  MonHW6.h  MonVER.h  MonVER_Extension.h  NavATT.h  (+36 more)
devel/lib/emcip_test/: emicp_test
devel/lib/pkgconfig/: emcip_test.pc  rosVLP.pc  ros_start.pc  ros_vlp.pc  ros_vlp_noswing.pc  sample.pc  swing_vlp.pc  ublox_gps.pc  ublox_msgs.pc  ublox_serialization.pc
devel/lib/ros_vlp/: calib_flx_ang  calib_flx_ang_mm  client_test  client_test_mm  manual_filter  manual_filter_mm  manual_gps  manual_gps_mm  manual_icp2_mm  manual_icp_mm  manual_icp_multi  manual_icp_multi_mm  manual_move  manual_move_mm  manual_transform  manual_transform_mm  manual_vgf  manual_vgf_mm  manual_visualizer  manual_visualizer2  manual_visualizer2_mm  manual_visualizer3  manual_visualizer3_mm  manual_visualizer_aln  manual_visualizer_aln_mm  manual_visualizer_mm  map_make  map_make_mm  pcd_record  pcd_record_mm  pub_test  pub_test_mm  rec_pcd_gps  rec_pcd_gps_imu  rec_pcd_gps_mm  rr_icp  rr_icp_mm  server_test  server_test_mm  sub_aln_visualizer  (+34 more)
devel/lib/ros_vlp_noswing/: nsub_pcl  nsub_pcl_visualizer  nsub_test  nusb_cycle  nvlp_pcd
devel/lib/sample/: hello
devel/lib/swing_vlp/: manual_filter  manual_gps  manual_icp  manual_icp2  manual_icp_multi  manual_move  manual_transform  manual_vgf  manual_visualizer  manual_visualizer2  manual_visualizer3  map_make  min_cuda_node  pcd_record  sub_icp  sub_pcl_visualizer  swing_move  usb_cycle  usb_gps  usb_imu  vlp_gpu  vlp_pcd  vlp_pcd_imu
devel/share/emcip_test/cmake/: emcip_testConfig.cmake
devel/share/gennodejs/ros/ublox_msgs/msg/: _index.js
devel/share/rosVLP/cmake/: rosVLPConfig.cmake
devel/share/ros_start/cmake/: ros_startConfig.cmake
devel/share/ros_vlp/cmake/: ros_vlpConfig.cmake
devel/share/ros_vlp_noswing/cmake/: ros_vlp_noswingConfig.cmake
devel/share/roseus/ros/ublox_msgs/: manifest.l
devel/share/sample/cmake/: sampleConfig.cmake
devel/share/swing_vlp/cmake/: swing_vlpConfig.cmake
devel/share/ublox_gps/cmake/: ublox_gpsConfig.cmake
devel/share/ublox_msgs/cmake/: ublox_msgs-msg-extras.cmake  ublox_msgs-msg-paths.cmake  ublox_msgsConfig.cmake
devel/share/ublox_serialization/cmake/: ublox_serializationConfig.cmake
joystick_drivers/.svn/: wc.db
src/emcip_test/: CMakeLists.txt  CMakeLists.txt~
src/emcip_test/src/: 3dregistration.h  3dregistration.h~  cloud2data.cpp  emicp.cu  emicp.cu~  emicp_cpu.cpp  emicp_cpu.cpp~  icp.cpp  icp.cpp~  main.cpp  main.cpp~  softassign.cu  softassign.cu~
src/emcip_test/src/helper/: helper.h
src/ros_vlp/: CMakeLists.txt  CMakeLists.txt~
src/ros_vlp/launch/: gps_vlp.launch  man_vlp.launch  man_vlp.launch~
src/ros_vlp/src/: .#rec_pcd_gps_imu.cpp  Dataset.h  VLP16.h  VLP16.h~  calib.h  calib_flx_ang_mm.cpp  client_test.cpp~  client_test_mm.cpp  hello.cpp  manual_filter.cpp~  manual_filter_mm.cpp  manual_gps.cpp~  manual_gps_mm.cpp  manual_icp.cpp~  manual_icp2_mm.cpp  manual_icp_multi_mm.cpp  manual_move.cpp~  manual_move_mm.cpp  manual_transform.cpp~  manual_vgf.cpp~  manual_vgf_mm.cpp  manual_visualizer.cpp~  manual_visualizer2_mm.cpp  manual_visualizer_aln_mm.cpp  map_make.cpp~  pcd_record_mm.cpp  pub_test.cpp~  pub_test_mm.cpp  rec_pcd_gps_imu.cpp~  rec_pcd_gps_imu_mm.cpp  rec_pcd_multi_mm.cpp  rr_icp.cpp~  rr_icp_mm.cpp  server_test.cpp~  server_test_mm.cpp  sub_aln_visualizer.cpp~  sub_aln_visualizer_mm.cpp  sub_icp.cpp~  sub_icp_mm.cpp  sub_pcd_stddev.cpp~  (+19 more)
src/sample/: CMakeLists.txt  package.xml
src/sample/src/: hello.cpp
src/swing_vlp/: #package.xml#  CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/swing_vlp/launch/: gps_vlp.launch~  imu_gps_vlp.launch  imu_gps_vlp.launch~
src/swing_vlp/src/: #rr_icp.cpp#  #usb_gps_pub.cpp#  G_VLP16.h  G_VLP16.h~  VLP16.h  cuda_test.cpp  cuda_test.cpp~  gps_icp.cpp  manual_gps.cpp  manual_icp.cpp  manual_icp2.cpp~  manual_icp_multi.cpp  manual_icp_multi.cpp~  manual_move.cpp  manual_transform.cpp  manual_transform.cpp~  manual_vgf.cpp  manual_visualizer.cpp  manual_visualizer.cpp~  manual_visualizer2.cpp  manual_visualizer3.cpp  manual_visualizer3.cpp~  map_make.cpp  map_make.cpp~  pcd_record.cpp  sub_pcl_visualizer.cpp  sub_pcl_visualizer.cpp~  swing_coodinate_trans.h~  swing_core.cpp  tri_gps.cpp  usb_cycle.cpp  usb_gps.cpp  usb_gps.cpp~  usb_imu.cpp  vlp_pcd.cpp  vlp_pcd.cpp~  vlp_pcd_gps.cpp  vlp_pcd_gps_icp.cpp  vlp_pcd_gps_imu.cpp  vlp_pcd_gps_imu.cpp~  (+1 more)
src/swing_vlp/src/gpu/: array.cu  array.h  swing_coodinate_trans.h  swing_move.cu  swing_move.cu~  swing_move.h  vlp_gpu.cpp  vlp_gpu.cpp~
